force-app/main/default/objects/Major__c/Major__c.object-meta.xml
<CustomObject>
    <label>Major</label>
    <nameField>
        <displayFormat>MJR-{0000000000}</displayFormat>
        <label>Major ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Majors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>