force-app/main/default/objects/Major__c/fields/Faculty__c.field-meta.xml
<CustomField>
    <fullName>Faculty__c</fullName>
    <label>Faculty</label>
    <referenceTo>Faculty__c</referenceTo>
    <relationshipLabel>Majors</relationshipLabel>
    <relationshipName>Majors</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>