force-app/main/default/objects/Major__c/fields/Number_of_Semesters__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Semesters__c</fullName>
    <label>Number of Semesters</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>