force-app/main/default/objects/Major__c/fields/Optional_Credits__c.field-meta.xml
<CustomField>
    <fullName>Optional_Credits__c</fullName>
    <label>Optional Credits</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>