force-app/main/default/objects/Major__c/fields/Total_Credits__c.field-meta.xml
<CustomField>
    <fullName>Total_Credits__c</fullName>
    <label>Total Credits</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>